# basePyProject

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
pybase/: app.py
tests/: pybase_test.py
